# transformerlens-model-table

./: .gitignore  README.md  demo.ipynb  get_model_table.py  makefile  pyproject.toml  requirements.txt  temp.ipynb  test.ipynb
.github/workflows/: main.yml
data/: model_table.jsonl  model_table.md
docs/: index.html  model_table.csv  model_table.jsonl  model_table.md  model_table.version  start_server.py
