[project]
name = "transformerlens-model-table"
version = "0.1.0"
description = "interactive model table for TransformerLens"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
	# force cpu pytorch (for actions)
	"torch>=2.2.1",
	# for the actual data
	"transformer_lens>=2.1.0",
	# shortening numerical values to strings, concatenating tensor dicts
	"muutils>=0.5.12",
	# some models require tiktoken
	"tiktoken>=0.8.0",
	# for the table
	"pandas>=2.2.2",
	# for writing the pandas dataframe to markdown
	"tabulate>=0.9.0",
	# for CLI
	"fire",
	# # transfromer_lens crashes without pytest, no idea why
	# "pytest",
	# # numpy 2.0.0 breaks wandb for now
	# "numpy<2.0.0",
]

[dependency-groups]
dev = [
  "ipykernel",
]
